# Black_Box_browser_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  advancement.md  architecture.mmd  blackbox_events.db  docker-compose.yml  explanation.md  full_info.md  lean_agent.py  pyproject.toml  run_agent.py  user_flow.mmd
agents/: browser_use_agent.py  display.py
blackbox_service/: __init__.py  agent.py  api.py  asgi.py  client.py  demo.py  engagement_bus.py  engagement_models.py  main.py  models.py  orchestrator.py  runtime.py  service.py  settings.py  store.py  stream.py
blackbox_service/agents_v2/: __init__.py  access_test.py  base.py  discovery.py  (+1 more)
docs/: agentic_architecture_reference.md  explanation.md  hexstrike_integration.md
reports/: 20260417_191322_report.md  20260417_194848_report.md  20260417_201114_report.md  20260417_211443_report.md  20260419_222938_report.md  20260419_225538_report.md  20260419_225707_report.md  20260420_093432_report.md  20260420_121903_report.md  20260421_112352_report.md  20260421_113012_report.md  20260421_120711_report.md
tests/: test_access_test_agent_tier4.py  test_access_test_tools.py  test_actions_and_memory.py  test_agent_reasoning.py  test_agent_step_sink.py  test_api_contracts.py  test_approval_resume.py  test_bie_http_post.py  test_browser_use_agent_fallback.py  test_confirm_tools.py  test_demo_blackbox.py  test_discovery_tools.py  test_engagement_api.py  test_event_store.py  test_explanation_doc.py  test_hexstrike_client.py  test_http_client.py  test_live_tool_path.py  test_llm_key_diagnostics.py  test_ops_console.py  test_phase1_contracts.py  test_planner_fallback.py  test_runtime_tabs.py  test_security_gate.py  test_service_fallback.py  test_settings.py  test_streaming.py  test_tool_observation_feedback.py  test_toolchannel_integration.py
(+8 files in other folders)
