[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox-agent"
version = "0.1.0"
description = "Blackbox web automation service with multi-tab control, live SSE telemetry, and SQLite memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "playwright>=1.50.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.30.0",
    "browser-use>=0.1.40",
    "langchain-anthropic>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.23",
]

[project.scripts]
blackbox-agent = "blackbox_service.main:main"
demo_blackbox = "blackbox_service.demo:main"
# Opens the cinematic SSE Operations Console.
# Usage: uv run ops_console [target_url]
ops_console = "blackbox_service.demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["blackbox_service*"]
