[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackbox-agent-phase-b"
version = "0.1.0"
description = "Blackbox Security Agent — Phase B: standalone browser-use agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.40",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
